--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<!-- Visual Boxes with custom data attribute matching appropriate audo tag
+Number following data-key is whatbrowser reads keystroke as-->
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -44,6 +47,8 @@
       <span class="sound">tink</span>
     </div>
   </div>
+
+<!-- Audio Files For Drumkit soudns with custom data attribute "data-key" -->
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
